# EMS_RedCo

./: .env  app.py  pyproject.toml  requirements.txt
pages/: 1_Player_Input.py  2_Result_Dashboard.py
src/ems/functions/: sim_progress.py  sql_queries.py
src/ems/st_pages/: input_dashboard.py  result_dashboard.py
