[tool.poetry]
packages = [{include = "ems", from = "src"}]

[project]
name = "ems-player-input"
version = "0.1.0"
description = ""
authors = [
    {name = "Ian Chen"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "streamlit (>=1.32.2,<2.0.0)",
    "plotly (>=5.20.0,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "pyodbc (>=5.2.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
